valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__node__test__first_transition.snap
---
source: valhalla-graphtile/src/graph_tile/node.rs
expression: "tile.transitions[0]"
---
NodeTransition {
    end_node_id: U64(
        1778766505,
    ),
    up: 0,
}
