valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__node__test__last_transition.snap
---
source: valhalla-graphtile/src/graph_tile/node.rs
expression: tile.transitions.last().unwrap()
---
NodeTransition {
    end_node_id: 241430249650,
    up: 0,
}
