valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__node__test__parse_nodes-2.snap
---
source: valhalla-graphtile/src/graph_tile/node.rs
expression: tile.nodes.last().unwrap()
---
NodeInfo {
    first_bit_field: FirstBitfield {
        lat_offset: 625189,
        lat_offset7: 4,
        lon_offset: 1527942,
        lon_offset7: 7,
        access: 4095,
    },
    second_bit_field: SecondBitfield {
        edge_index: 3424,
        edge_count: 2,
        admin_index: 1,
        time_zone_index: 293,
        intersection_type: 0,
        node_type: 0,
        density: 1,
        is_traffic_signal: 0,
        mode_change_allowed: 0,
        is_named_intersection: 0,
    },
    third_bit_field: ThirdBitfield {
        transition_index: 711,
        transition_count: 1,
        local_driveability: 63,
        local_edge_count: 2,
        drive_on_right: 1,
        tagged_access: 0,
        private_access: 0,
        is_cash_only_toll: 0,
        elevation: 0,
        time_zone_ext: 0,
    },
    headings: 8642144,
}
